--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Ching-Ting Tsai & Yi-Shiou Duh
  
 #--- List of links in the navigation bar ---#
 navbar-links:
-  Characterizations: "characterizations"
+  Characterizations: "Team"
   Resources: "https://snfexfab.stanford.edu"
   
 #--- Logo ---#
