--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: PrintableOptics
 
-author: Ching-Ting Tsai & Yi-Shiou
+author: Ching-Ting Tsai & Yi-Shiou Duh
  
 #--- List of links in the navigation bar ---#
 navbar-links:
