--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: PrintableOptics
-author: Ching-Ting Tsai & Yi-Shiou Duh
+author: Ching-Ting Tsai & Yi-Shiou
   
 #--- List of links in the navigation bar ---#
 navbar-links:
