--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navbar-links:
   - Mechanical stability: "/md/Overhanging" 
   - Parameters sweep: "/md/Parameter" 
  
-  Resources: 
+  Others: 
   - Acknowledments: "/md/Team"
   - SNF website: "https://snfexfab.stanford.edu"
   - SNSF website: "https://snsf.stanford.edu"
