--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Ching-Ting Tsai & Yi-Shiou Duh
 navbar-links:
   Introduction: "/md/Motivation"
   Methods:
-  - Process: "Metrics"
+  - Process: "Process"
   - Job File: "/md/Job"
   Results         :
   - Writing: "Conditions"
