--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ navbar-links:
   Results:
   - Writing: "Conditions"
   - Characterizations: "Characterizations"
-  - Functionalities: "Functionalities"
+  - Functionalities: "functionalities"
   Tips & Tricks:
   - File generation: "File"
   - Writing: "Writing" 
